--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,17 @@ dash-core-components==1.10.1
 dash-html-components==1.0.3
 dash-renderer==1.5.1
 dash-table==4.8.1
+et-xmlfile==1.0.1
 Flask==1.1.2
+Flask-Caching==1.9.0
 Flask-Compress==1.5.0
 future==0.18.2
 itsdangerous==1.1.0
+jdcal==1.4.1
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 numpy==1.19.0
+openpyxl==3.0.5
 pandas==1.0.5
 plotly==4.8.2
 python-dateutil==2.8.1
